Fix last few chapters error
fix last few chapters not showing error + context menu block

--- a/style/common.css
+++ b/style/common.css
@@ -77,7 +77,7 @@ great {
 #contextMenu {
     width: 120px;
     user-select: none;
-    z-index: 1;
+    z-index: 100;
     box-shadow: 0 4px 5px 3px rgba(0, 0, 0, 0.2);
     position: fixed;
     display: none;
